--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "author": "Nayan Choudhary",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.14.0"
   }
 }
